# hw_xor_list_custom_allocs

./: CMakeLists.txt  build.sh  rebuild.sh  test.sh
include/: StackAllocator.hpp  StackAllocator.tpp  XorList.hpp  XorList.tpp
src/: SpeedTest.cpp  StackAllocatorUnitTests.cpp  XorListUnitTests.cpp
